Stream->List 변환 방식 Stream.toList() 으로 변경